@@ -4,7 +4,7 @@
 	<id>temar:TEA</id>
 	<name>Temars EVE API</name>
 	<type>modification</type>
-	<version>1.2.1</version>
+	<version>1.2.1.142</version>
 	<install for="1.1 - 1.1.99">
 		<readme type="file">readme.txt</readme>
 		<readme type="inline" parsebbc="true">[color=red]Error! This mod does not support your version of SMF.[/color]</readme>
@@ -89,7 +89,7 @@
 		<remove-file name="$boarddir/esam_upgrade.php" />
 		<remove-die name="$sourcedir/TS3_Class" />
 	</uninstall>
-	<upgrade from="1.2.1">
+	<upgrade from="1.2.1.0">
 		<readme type="file">readme.txt</readme>
 		<require-file name="TEA.php" destination="$sourcedir" />
 		<require-file name="TEAC.php" destination="$sourcedir" />
