@@ -8,6 +8,7 @@ New Features
 - Online reg Method for TS now removes old Accounts
 - You can now Alter permissions for viewing and editing API Page
 - Full Check now runs with a limit of 25 Seconds, and auto Refreshes if Manual
+- You can now Get an Update by Clicking Download under TEA Admin info page
 
 Bug Fixes
 - Fixed Bug with Character Selection on Profile Were if you had no API then you couldnt add 1 (Fix by monorailpilot)
